syntax = "proto2";
option java_package = "proto.person";

message NameRegisteredMessage {
    optional string name = 1;
    optional string surname = 2;
}

message NameChangedMessage {
    optional string name = 1;
}

message SurnameChangedMessage {
    optional string surname = 1;
}